fixed scrollbar issue in IE and Chrome tours

--- a/LADS/js/RIN/web/systemResources/themeResources/playerControls/Controller.part.css
+++ b/LADS/js/RIN/web/systemResources/themeResources/playerControls/Controller.part.css
@@ -21,7 +21,7 @@ html, body, .rinPlayer
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    //overflow: hidden;
     width: 100%;
     font-family: "Segoe" , Tahoma, Geneva, Verdana, sans-serif;
     font-size: 100%;
