--- a/LADS/js/RIN/web/systemResources/themeResources/rin.css
+++ b/LADS/js/RIN/web/systemResources/themeResources/rin.css
@@ -1,4 +1,4 @@
-/*! RIN | http://research.microsoft.com/rin | 2014-02-04 */
+/*! RIN | http://research.microsoft.com/rin | 2014-02-06 */
 .rin_selectDisable
 {
     -webkit-user-select: none;
@@ -697,7 +697,7 @@ html, body, .rinPlayer
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    //overflow: hidden;
     width: 100%;
     font-family: "Segoe" , Tahoma, Geneva, Verdana, sans-serif;
     font-size: 100%;
